// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConvertingProgress should render with correct progress with 0% done 1`] = `
.c0 {
  width: 100%;
}

.c1 {
  color: !important;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
    data-testid="progress-container"
  >
    <div
      data-mocked="ProgressBar"
      label="Converting nodes"
      status="in-progress"
      value="0"
    >
      <div>
        <div
          class="c1"
          data-mocked="Box"
        >
          0 out of 10 converted
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConvertingProgress should render with correct progress with all done 1`] = `
.c0 {
  width: 100%;
}

.c1 {
  color: !important;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
    data-testid="progress-container"
  >
    <div
      data-mocked="ProgressBar"
      label="Converting nodes"
      status="in-progress"
      value="100"
    >
      <div>
        <div
          class="c1"
          data-mocked="Box"
        >
          10 out of 10 converted
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConvertingProgress should render with correct progress with partially done 1`] = `
.c0 {
  width: 100%;
}

.c1 {
  color: !important;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
    data-testid="progress-container"
  >
    <div
      data-mocked="ProgressBar"
      label="Converting nodes"
      status="in-progress"
      value="22.22222222222222"
    >
      <div>
        <div
          class="c1"
          data-mocked="Box"
        >
          2 out of 9 converted
        </div>
      </div>
    </div>
  </div>
</div>
`;
